# shvm

./: .travis.yml  CMakeLists.txt  Makefile  README.md  Untitled Diagram.xml
include/: shvm.h
include/shvm/: bi.h  ctx.h  env.h  exe.h  job.h  op.h  proc.h  scope.h  var.h  vm.h  word.h
src/: bi.c  ctx.c  env.c  exe.c  job.c  op.c  proc.c  scope.c  var.c  vm.c  word.c
src/bi/: bg.c  env.c  export.c  fg.c  jobs.c  setenv.c  unset.c  unsetenv.c
src/job/: completed.c  cont.c  mark.c  stopped.c  wait.c
src/op/: bin.c  bina.c  cclr.c  comp.c  eval.c  exec.c  fork.c  goto.c  init.c  jump.c  pipe.c  term.c  wait.c  word.c
test/: 01.c
